Convert to Swift 2.3

--- a/Stingtk/Info.plist
+++ b/Stingtk/Info.plist
@@ -50,5 +50,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>This will allow you to load your playlists and music files into the app.</string>
 </dict>
 </plist>
