Add document browser key to Info.plist. Add open url method to app delegate with warning to implement this in the future (returns false for now).

--- a/Resources/Info.plist
+++ b/Resources/Info.plist
@@ -87,5 +87,7 @@
 	<true/>
 	<key>LSSupportsOpeningDocumentsInPlace</key>
 	<true/>
+	<key>UISupportsDocumentBrowser</key>
+	<true/>
 </dict>
 </plist>
